# server/controllers/StudentController.js
@@ -1024,8 +1024,8 @@ const getStudentDetails = async (req, res) => {
   try {
     const response = await Student.find(searchFields)
       .populate("userId", "email contactNumber name")
-      .populate("classes", "name")
-      .populate("sections", "name");
+      // .populate("classes", "name")
+      // .populate("sections", "name");
 
     if (!response || response.length === 0) {
       return res.status(404).json({ data: [], message: "No student found", status: false });
@@ -1047,8 +1047,8 @@ const getAllStudentsList = async (req, res) => {
   try {
     const students = await Student.find({ schoolId: req.user.schoolId })
       .populate("userId", "name email avatar contactNumber isActive")
-      .populate("classes", "name")
-      .populate("sections", "name");
+      // .populate("classes", "name")
+      // .populate("sections", "name");
 
     if (!students || students.length === 0) {
       return res.status(200).json({ data: [], message: "No student found", status: false });
